--- a/src/components/Common/StatusChip.css
+++ b/src/components/Common/StatusChip.css
@@ -1,9 +1,9 @@
-@keyframes pulse {
+@keyframes statusPulse {
   0% {
     opacity: 1;
   }
   50% {
-    opacity: 0.7;
+    opacity: 0.6;
   }
   100% {
     opacity: 1;
@@ -17,14 +17,15 @@
 }
 
 .status-chip.completed {
-  background-color: #a8e6cf;
-  color: #2d6a4f;
+  background-color: #a8e6cf !important;
+  color: #2d6a4f !important;
 }
 
 .status-chip.running {
-  background-color: #b8e0ff;
-  color: #1e4976;
-  animation: pulse 1.5s ease-in-out infinite;
+  background-color: #b8e0ff !important;
+  color: #1e4976 !important;
+  animation: statusPulse 1.5s ease-in-out infinite !important;
+  position: relative;
 }
 
 .status-chip.running::before {
@@ -32,17 +33,18 @@
   display: inline-block;
   width: 8px;
   height: 8px;
+  margin-right: 2px;
   border-radius: 50%;
   background-color: currentColor;
-  animation: pulse 1.5s ease-in-out infinite;
+  animation: statusPulse 1.5s ease-in-out infinite !important;
 }
 
 .status-chip.canceled {
-  background-color: #e9ecef;
-  color: #495057;
+  background-color: #e9ecef !important;
+  color: #495057 !important;
 }
 
 .status-chip.terminated {
-  background-color: #ffd3d1;
-  color: #842029;
+  background-color: #ffd3d1 !important;
+  color: #842029 !important;
 } 
