--- a/src/components/WorkflowDetails/WorkflowDetails.css
+++ b/src/components/WorkflowDetails/WorkflowDetails.css
@@ -65,6 +65,14 @@
 }
 
 /* Overview header styles */
+.overview-title-small.MuiTypography-root {
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-bottom: 4px;
+  line-height: 1.2;
+}
+
+/* Overview header styles */
 .overview-title.MuiTypography-root {
   font-size: 1.75rem;
   font-weight: 500;
