--- a/src/components/JsonViewer/JsonViewer.css
+++ b/src/components/JsonViewer/JsonViewer.css
@@ -11,7 +11,11 @@
   position: absolute;
   right: 8px;
   top: 8px;
-  color: #abb2bf;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
 }
 
 .json-viewer__container {
